[tool.poetry]
name = "Финансовый виджет"
version = "0.1.0"
description = "Финансовый виджет для банка"
authors = ["Faritov Rome <faritov.rome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119
